# sale-workflow

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
.github/workflows/: test.yml
partner_sale_pivot/: README.rst
portal_sale_order_search/: README.rst
portal_sale_order_search/i18n/: it.po
portal_sale_personal_data_only/: README.rst
pricelist_cache/: README.rst
pricelist_cache/data/: ir_cron.xml
pricelist_cache/models/: product_product.py
pricelist_cache/readme/: ROADMAP.md
pricelist_cache/views/: product_pricelist_cache.xml
pricelist_cache/wizards/: pricelist_cache_wizard.xml
pricelist_cache_rest/: README.rst
pricelist_cache_rest/wizards/: res_config_settings.xml
product_customerinfo_elaboration/: README.rst
product_customerinfo_elaboration/readme/: CONFIGURE.md  CONTRIBUTORS.md  DESCRIPTION.md
product_customerinfo_sale/: README.rst
product_customerinfo_sale/i18n/: it.po  nl.po
product_form_sale_link/: README.rst
product_form_sale_link/i18n/: nl.po
product_price_category/: __manifest__.py
product_price_category/i18n/: product_price_category.pot  sl.po
product_price_category/models/: product_pricelist_item.py
product_price_category/security/: ir.model.access.csv
product_price_category/tests/: test_sale.py
product_price_category/views/: product_pricelist.xml
product_set_sell_only_by_packaging/i18n/: product_set_sell_only_by_packaging.pot
product_supplierinfo_for_customer_sale/i18n/: fr.po  it.po
product_supplierinfo_for_customer_sale_blanket_order/i18n/: it.po
sale_advance_payment/: README.rst  __manifest__.py
sale_attached_product/: README.rst
sale_automatic_workflow/: README.rst
sale_automatic_workflow_job/: README.rst
sale_automatic_workflow_stock_job/: README.rst
sale_blanket_order/: README.rst
sale_block_no_stock/: README.rst  __manifest__.py
sale_company_currency/: README.rst
sale_confirm_group/: README.rst
sale_delivery_split_date/: README.rst
sale_delivery_state/: README.rst  __manifest__.py  hooks.py
sale_elaboration/: README.rst  __manifest__.py
sale_elaboration/i18n/: it.po  (+2 more)
sale_exception/: __manifest__.py
sale_exception_holidays_public/: README.rst
sale_fixed_discount/: README.rst
sale_force_invoiced_quantity/: README.rst  __manifest__.py
sale_global_discount/: README.rst
sale_invoice_blocking/: README.rst
sale_invoice_frequency/: README.rst  __manifest__.py
sale_invoice_plan/: README.rst  __manifest__.py
sale_invoice_policy/: README.rst  __manifest__.py
sale_invoice_split_payment/: README.rst
sale_mail_autosubscribe/: README.rst
sale_manual_delivery/: README.rst
sale_mrp_bom/: README.rst
sale_multi_template_application/: README.rst  __manifest__.py
sale_order_amount_to_invoice/: README.rst  __manifest__.py
sale_order_cancel_optional_email/: README.rst
sale_order_carrier_auto_assign/: README.rst  __manifest__.py
sale_order_general_discount/: README.rst  __manifest__.py
sale_order_invoice_amount/: README.rst  hooks.py
sale_order_invoicing_finished_task/: README.rst
sale_order_line_chained_move/: README.rst
sale_order_line_client_order_ref/: README.rst  __manifest__.py
sale_order_line_delivery_state/: README.rst
sale_order_line_description/: README.rst
sale_order_line_effective_date/: README.rst  __manifest__.py
sale_order_line_input/: README.rst
sale_order_line_note/: README.rst
sale_order_line_price_lock_by_pricelist/: README.rst  __manifest__.py
sale_order_line_product_attribute_values/: README.rst  __manifest__.py
sale_order_line_remove/: README.rst
sale_order_line_tag/: README.rst
sale_order_lot_selection/: README.rst  __manifest__.py
sale_order_lot_selection_price/: README.rst
sale_order_note_template/: README.rst
sale_order_partner_no_autofollow/: README.rst
sale_order_price_recalculation/: README.rst
sale_order_priority/: README.rst
sale_order_product_assortment/: README.rst  __manifest__.py
sale_order_product_recommendation/: README.rst
sale_order_requested_delivery/: README.rst  __manifest__.py
sale_order_secondary_unit/: README.rst
sale_order_split_strategy/: README.rst  __manifest__.py
sale_order_tag/: README.rst
sale_order_team_from_product/: README.rst  __manifest__.py
sale_order_transmit_method/: README.rst
sale_order_type/: README.rst  __manifest__.py
sale_order_warn_message/: README.rst
sale_order_weight/: README.rst  __manifest__.py  pre_init_hook.py
sale_packaging_default/: README.rst
sale_partner_address_restrict/: README.rst  __manifest__.py
sale_partner_incoterm/: README.rst
sale_partner_order_template/: README.rst
sale_partner_primeship/: README.rst
sale_partner_shipping_default_partner_invoice/: README.rst  __manifest__.py
sale_planner_calendar/: __manifest__.py
sale_pricelist_display_surcharge/: README.rst
sale_pricelist_global_rule/: README.rst  __manifest__.py
sale_pricelist_packaging/: README.rst
sale_procurement_group_by_line/: README.rst  __manifest__.py
sale_product_email/: README.rst  __manifest__.py
sale_product_identification/: README.rst
sale_product_multi_add/: README.rst  __manifest__.py
sale_quotation_number/: README.rst
sale_readonly_security/: README.rst
sale_require_po_doc/: README.rst
sale_resource_booking/: README.rst  __manifest__.py
sale_sourced_by_line/: __manifest__.py
sale_stock_delivery_address/: README.rst
sale_stock_expiry_date_on_qty_at_date_widget/: README.rst  __manifest__.py
sale_stock_line_sequence/: README.rst
sale_stock_partner_warehouse/: README.rst  __manifest__.py
sale_stock_picking_blocking/: README.rst
sale_stock_picking_note/: README.rst
sale_stock_reservation_issue_on_qty_at_date_widget/: README.rst  __manifest__.py
sale_stock_return_request/: README.rst
sale_stock_secondary_unit/: README.rst
sale_substate/: README.rst
sale_transaction_form_link/: README.rst
sale_validity_auto_cancel/: README.rst  __manifest__.py
sale_warn_option/: README.rst  __manifest__.py
sales_team_invoiced_target_domain/: README.rst
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+383 files in other folders)
