[project]
name = "odoo-addons-oca-sale-workflow"
version = "18.0.20250520.0"
dependencies = [
    "odoo-addon-pricelist_cache==18.0.*",
    "odoo-addon-product_customerinfo_sale==18.0.*",
    "odoo-addon-product_form_sale_link==18.0.*",
    "odoo-addon-product_set_sell_only_by_packaging==18.0.*",
    "odoo-addon-sale_automatic_workflow==18.0.*",
    "odoo-addon-sale_automatic_workflow_job==18.0.*",
    "odoo-addon-sale_automatic_workflow_periodicity==18.0.*",
    "odoo-addon-sale_automatic_workflow_stock==18.0.*",
    "odoo-addon-sale_automatic_workflow_stock_job==18.0.*",
    "odoo-addon-sale_cancel_reason==18.0.*",
    "odoo-addon-sale_commercial_partner==18.0.*",
    "odoo-addon-sale_company_currency==18.0.*",
    "odoo-addon-sale_delivery_split_date==18.0.*",
    "odoo-addon-sale_delivery_state==18.0.*",
    "odoo-addon-sale_discount_display_amount==18.0.*",
    "odoo-addon-sale_exception==18.0.*",
    "odoo-addon-sale_exception_product_sale_manufactured_for==18.0.*",
    "odoo-addon-sale_fixed_discount==18.0.*",
    "odoo-addon-sale_force_invoiced==18.0.*",
    "odoo-addon-sale_mail_autosubscribe==18.0.*",
    "odoo-addon-sale_order_archive==18.0.*",
    "odoo-addon-sale_order_disable_user_autosubscribe==18.0.*",
    "odoo-addon-sale_order_general_discount==18.0.*",
    "odoo-addon-sale_order_line_date==18.0.*",
    "odoo-addon-sale_order_line_menu==18.0.*",
    "odoo-addon-sale_order_line_note==18.0.*",
    "odoo-addon-sale_order_line_price_history==18.0.*",
    "odoo-addon-sale_order_line_sequence==18.0.*",
    "odoo-addon-sale_order_lot_selection==18.0.*",
    "odoo-addon-sale_order_note_template==18.0.*",
    "odoo-addon-sale_order_price_recalculation==18.0.*",
    "odoo-addon-sale_order_product_assortment==18.0.*",
    "odoo-addon-sale_order_product_availability_inline==18.0.*",
    "odoo-addon-sale_order_product_recommendation==18.0.*",
    "odoo-addon-sale_order_report_without_price==18.0.*",
    "odoo-addon-sale_order_requested_delivery==18.0.*",
    "odoo-addon-sale_order_revision==18.0.*",
    "odoo-addon-sale_order_split_strategy==18.0.*",
    "odoo-addon-sale_order_tag==18.0.*",
    "odoo-addon-sale_order_type==18.0.*",
    "odoo-addon-sale_order_warn_message==18.0.*",
    "odoo-addon-sale_partner_address_restrict==18.0.*",
    "odoo-addon-sale_partner_incoterm==18.0.*",
    "odoo-addon-sale_partner_selectable_option==18.0.*",
    "odoo-addon-sale_procurement_group_by_line==18.0.*",
    "odoo-addon-sale_product_set==18.0.*",
    "odoo-addon-sale_product_set_packaging_qty==18.0.*",
    "odoo-addon-sale_require_po_doc==18.0.*",
    "odoo-addon-sale_shipping_info_helper==18.0.*",
    "odoo-addon-sale_sourced_by_line==18.0.*",
    "odoo-addon-sale_stock_cancel_restriction==18.0.*",
    "odoo-addon-sale_stock_delivery_state==18.0.*",
    "odoo-addon-sale_stock_line_customer_ref==18.0.*",
    "odoo-addon-sale_stock_picking_blocking==18.0.*",
    "odoo-addon-sale_stock_picking_note==18.0.*",
    "odoo-addon-sale_stock_return_request==18.0.*",
    "odoo-addon-sale_tier_validation==18.0.*",
    "odoo-addon-sale_wishlist==18.0.*",
    "odoo-addon-sales_team_security==18.0.*",
    "odoo-addon-sell_only_by_packaging==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
