[project]
name = "odoo-addons-oca-sale-workflow"
version = "18.0.20251023.0"
dependencies = [
    "odoo-addon-partner_sale_pivot==18.0.*",
    "odoo-addon-portal_sale_order_search==18.0.*",
    "odoo-addon-portal_sale_personal_data_only==18.0.*",
    "odoo-addon-pricelist_cache==18.0.*",
    "odoo-addon-product_customerinfo_elaboration==18.0.*",
    "odoo-addon-product_customerinfo_sale==18.0.*",
    "odoo-addon-product_form_sale_link==18.0.*",
    "odoo-addon-product_set_sell_only_by_packaging==18.0.*",
    "odoo-addon-sale_automatic_workflow==18.0.*",
    "odoo-addon-sale_automatic_workflow_job==18.0.*",
    "odoo-addon-sale_automatic_workflow_periodicity==18.0.*",
    "odoo-addon-sale_automatic_workflow_stock==18.0.*",
    "odoo-addon-sale_automatic_workflow_stock_job==18.0.*",
    "odoo-addon-sale_block_no_stock==18.0.*",
    "odoo-addon-sale_cancel_reason==18.0.*",
    "odoo-addon-sale_commercial_partner==18.0.*",
    "odoo-addon-sale_company_currency==18.0.*",
    "odoo-addon-sale_delivery_split_date==18.0.*",
    "odoo-addon-sale_delivery_state==18.0.*",
    "odoo-addon-sale_discount_display_amount==18.0.*",
    "odoo-addon-sale_elaboration==18.0.*",
    "odoo-addon-sale_exception==18.0.*",
    "odoo-addon-sale_exception_product_sale_manufactured_for==18.0.*",
    "odoo-addon-sale_fixed_discount==18.0.*",
    "odoo-addon-sale_force_invoiced==18.0.*",
    "odoo-addon-sale_global_discount==18.0.*",
    "odoo-addon-sale_invoice_blocking==18.0.*",
    "odoo-addon-sale_invoice_frequency==18.0.*",
    "odoo-addon-sale_invoice_policy==18.0.*",
    "odoo-addon-sale_invoice_split_payment==18.0.*",
    "odoo-addon-sale_mail_autosubscribe==18.0.*",
    "odoo-addon-sale_manual_delivery==18.0.*",
    "odoo-addon-sale_mrp_bom==18.0.*",
    "odoo-addon-sale_order_amount_to_invoice==18.0.*",
    "odoo-addon-sale_order_archive==18.0.*",
    "odoo-addon-sale_order_carrier_auto_assign==18.0.*",
    "odoo-addon-sale_order_disable_user_autosubscribe==18.0.*",
    "odoo-addon-sale_order_general_discount==18.0.*",
    "odoo-addon-sale_order_invoicing_finished_task==18.0.*",
    "odoo-addon-sale_order_line_chained_move==18.0.*",
    "odoo-addon-sale_order_line_date==18.0.*",
    "odoo-addon-sale_order_line_delivery_state==18.0.*",
    "odoo-addon-sale_order_line_input==18.0.*",
    "odoo-addon-sale_order_line_menu==18.0.*",
    "odoo-addon-sale_order_line_note==18.0.*",
    "odoo-addon-sale_order_line_price_history==18.0.*",
    "odoo-addon-sale_order_line_remove==18.0.*",
    "odoo-addon-sale_order_line_sequence==18.0.*",
    "odoo-addon-sale_order_line_stock_move_history==18.0.*",
    "odoo-addon-sale_order_line_tag==18.0.*",
    "odoo-addon-sale_order_lot_selection==18.0.*",
    "odoo-addon-sale_order_note_template==18.0.*",
    "odoo-addon-sale_order_price_recalculation==18.0.*",
    "odoo-addon-sale_order_priority==18.0.*",
    "odoo-addon-sale_order_product_assortment==18.0.*",
    "odoo-addon-sale_order_product_availability_inline==18.0.*",
    "odoo-addon-sale_order_product_recommendation==18.0.*",
    "odoo-addon-sale_order_report_without_price==18.0.*",
    "odoo-addon-sale_order_requested_delivery==18.0.*",
    "odoo-addon-sale_order_revision==18.0.*",
    "odoo-addon-sale_order_secondary_unit==18.0.*",
    "odoo-addon-sale_order_split_strategy==18.0.*",
    "odoo-addon-sale_order_tag==18.0.*",
    "odoo-addon-sale_order_transmit_method==18.0.*",
    "odoo-addon-sale_order_type==18.0.*",
    "odoo-addon-sale_order_warn_message==18.0.*",
    "odoo-addon-sale_packaging_default==18.0.*",
    "odoo-addon-sale_partner_address_restrict==18.0.*",
    "odoo-addon-sale_partner_incoterm==18.0.*",
    "odoo-addon-sale_partner_primeship==18.0.*",
    "odoo-addon-sale_partner_selectable_option==18.0.*",
    "odoo-addon-sale_pricelist_display_surcharge==18.0.*",
    "odoo-addon-sale_procurement_group_by_line==18.0.*",
    "odoo-addon-sale_product_identification==18.0.*",
    "odoo-addon-sale_product_set==18.0.*",
    "odoo-addon-sale_product_set_packaging_qty==18.0.*",
    "odoo-addon-sale_quotation_number==18.0.*",
    "odoo-addon-sale_readonly_security==18.0.*",
    "odoo-addon-sale_require_po_doc==18.0.*",
    "odoo-addon-sale_shipping_info_helper==18.0.*",
    "odoo-addon-sale_sourced_by_line==18.0.*",
    "odoo-addon-sale_stock_cancel_restriction==18.0.*",
    "odoo-addon-sale_stock_delivery_state==18.0.*",
    "odoo-addon-sale_stock_line_customer_ref==18.0.*",
    "odoo-addon-sale_stock_line_sequence==18.0.*",
    "odoo-addon-sale_stock_partner_warehouse==18.0.*",
    "odoo-addon-sale_stock_picking_blocking==18.0.*",
    "odoo-addon-sale_stock_picking_note==18.0.*",
    "odoo-addon-sale_stock_return_request==18.0.*",
    "odoo-addon-sale_substate==18.0.*",
    "odoo-addon-sale_tier_validation==18.0.*",
    "odoo-addon-sale_transaction_form_link==18.0.*",
    "odoo-addon-sale_wishlist==18.0.*",
    "odoo-addon-sales_team_security==18.0.*",
    "odoo-addon-sell_only_by_packaging==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
